--- a/project-a/index.html
+++ b/project-a/index.html
@@ -37,7 +37,7 @@ CCLaboratories Biodiversity Atlas
         <div class="two-columns">
             <div class="left">
                 <h3 class="red">Scientific Name:</h3>
-                <p>Proteus cursor</p>
+                <p>Proteus cursor!!!</p>
 
                 <h3 class="red">Discovered by / at:</h3>
                 <p>Ryan Gao, 10/16/25 2:47 PM</p>
