--- a/project-a/index.html
+++ b/project-a/index.html
@@ -9,7 +9,7 @@ CCLaboratories Biodiversity Atlas
 <html>
 
 <head>
-    <title>The Scutoid</title>
+    <title>Squirmgle</title>
 
     <!-- allow special characters, including Arabic, Chinese, Korean, Japanese, etc. -->
     <meta charset="UTF-8">
@@ -40,7 +40,7 @@ CCLaboratories Biodiversity Atlas
                 <p>Proteus cursor</p>
 
                 <h3 class="red">Discovered by / at:</h3>
-                <p>Ryan Gao, 10/16/25 2:47 PM</p>
+                <p>Ryan Gao / 10/16/25 2:47 PM, SMSL (Super Mega Secret Lab)</p>
 
                 <h3 class="green">Family:</h3>
                 <p>The Scutoid belongs to the family Proteamorphidae, or "Changeable Ones." This family is defined by its members' unstable, fluid morphologies and their unique ability to alter their physical form in response to environmental stimuli.</p>
