--- a/project-a/index.html
+++ b/project-a/index.html
@@ -43,37 +43,33 @@ CCLaboratories Biodiversity Atlas
                 <p>Ryan Gao / 10/16/25 2:47 PM, SMSL (Super Mega Secret Lab)</p>
 
                 <h3 class="green">Family:</h3>
-                <p>The Scutoid belongs to the family Proteamorphidae, or "Changeable Ones." This family is defined by its members' unstable, fluid morphologies and their unique ability to alter their physical form in response to environmental stimuli.</p>
+                <p>The Squirmgle belongs to the Squirmgalidae family, its members are known for wiggling, 
+                    gelatinous bodies and skittish, escape-artist behavior.</p>
             </div>
             <div class="right">
                 <h3 class="green">Habitat:</h3>
-                <p>Aqueous digital micro-environments. It thrives in the nutrient-rich data streams 
-                    of microscopic simulation chambers, often observed floating among particulate 
-                    data fragments and other microscopic digital detritus.</p>
+                <p>It lives in aquatic digital micro-environments. It's often observed floating amongst 
+                    data particles and floating bits of information which it feeds on.</p>
 
                 <h3 class="green">Appearance:</h3>
-                <p>A shifting gelatinous body with 5 to 10 ever-changing, waving limbs. Its form is 
+                <p>A shifting gelatinous body with 5 to 10 waving limbs. Its form is 
                     never the same from one moment to the next.</p>
 
                 <h3 class="green">Key Characteristics:</h3>
                 <ul>
                     <li>Exhibits a flight response to proximity.</li>
-                    <li>Generates 5-10 transient, waving limbs.</li>
+                    <li>Generates 5-10 waving limbs.</li>
                     <li>Enters a hyperkinetic state when startled.</li>
-                    <li>...</li>
                 </ul>
             </div>
         </div>
         <div class="one-column">
             <p>
                 <span class="yellow">What we know so far about the scutoid?</span>
-                The Scutoid is a living algorithm of perpetual change, a digital bacterium 
-                that defies static observation. It flees from perceived threats and possesses 
-                a "Hyperkinetic Escape Reflex"—when startled, it moves violently and scrambles 
-                its local environment. It sustains its constant shape-shifting and generation 
-                of 5-10 waving limbs by metabolizing metallic data traces. It is less an 
-                organism and more a chaotic process, leading to myths that it is a guardian of 
-                fundamental digital entropy, capable of destabilizing entire systems if provoked.
+                The Squirmgle’s speed is controlled by mouse pressure—click to turbo-boost its frantic escape.
+                It “eats” by absorbing stray data fragments from its digital environment. When startled, it 
+                flees in the exact opposite direction of your cursor, bouncing wildly off invisible walls with 
+                a comical 20% energy loss.
                 <br>
                 <span class="yellow">Guidelines for human interaction with this creature</span>
                 The Scutoid is shy. Hovering your cursor too close will cause it stress and trigger its flight instinct. 
