--- a/project-a/index.html
+++ b/project-a/index.html
@@ -26,7 +26,7 @@ CCLaboratories Biodiversity Atlas
 <body>
     <!-- title -->
     <div id="title-wrapper">
-        <h1 class="headline black">The Scutoid</h1>
+        <h1 class="headline black">Squirmgle</h1>
     </div>
 
     <!-- main content -->
@@ -66,10 +66,10 @@ CCLaboratories Biodiversity Atlas
         <div class="one-column">
             <p>
                 <span class="yellow">What we know so far about the scutoid?</span>
-                The Squirmgle’s speed is controlled by mouse pressure—click to turbo-boost its frantic escape.
-                It “eats” by absorbing stray data fragments from its digital environment. When startled, it 
-                flees in the exact opposite direction of your cursor, bouncing wildly off invisible walls with 
-                a comical 20% energy loss.
+                The solitary Squirmgle consumes floating data fragments for sustenance. It communicates through gentle 
+                vibrations, though frantic, high-speed shaking means it's scared. A Squirmgle's number of limbs can 
+                change, and it instinctively avoids other creatures, including curious observers, preferring its own 
+                company in the vast digital sea.
                 <br>
                 <span class="yellow">Guidelines for human interaction with this creature</span>
                 The Scutoid is shy. Hovering your cursor too close will cause it stress and trigger its flight instinct. 
