--- a/project-a/index.html
+++ b/project-a/index.html
@@ -9,7 +9,7 @@ CCLaboratories Biodiversity Atlas
 <html>
 
 <head>
-    <title>Squirmgle</title>
+    <title>Under the Microscope</title>
 
     <!-- allow special characters, including Arabic, Chinese, Korean, Japanese, etc. -->
     <meta charset="UTF-8">
