--- a/project-a/index.html
+++ b/project-a/index.html
@@ -37,7 +37,7 @@ CCLaboratories Biodiversity Atlas
         <div class="two-columns">
             <div class="left">
                 <h3 class="red">Scientific Name:</h3>
-                <p>Proteus cursor</p>
+                <p>Proteus Cursor</p>
 
                 <h3 class="red">Discovered by / at:</h3>
                 <p>Ryan Gao / 10/16/25 2:47 PM, SMSL (Super Mega Secret Lab)</p>
@@ -82,7 +82,7 @@ CCLaboratories Biodiversity Atlas
 
     <!-- Footer -->
     <div id="footer" class="black">
-        <p>A CCLab project made by [Your Name] in [Current Semester]</p>
+        <p>A CCLab project made by Ryan Gao in Fall 2025</p>
     </div>
 
     <!-- Home: Link back to the ATLAS page-->
