--- a/project-a/index.html
+++ b/project-a/index.html
@@ -60,6 +60,7 @@ CCLaboratories Biodiversity Atlas
                     <li>Exhibits a flight response to proximity.</li>
                     <li>Generates 5-10 waving limbs.</li>
                     <li>Enters a hyperkinetic state when startled.</li>
+                    <li>Shape-shifting body.</li>
                 </ul>
             </div>
         </div>
