--- a/project-a/index.html
+++ b/project-a/index.html
@@ -66,14 +66,14 @@ CCLaboratories Biodiversity Atlas
         </div>
         <div class="one-column">
             <p>
-                <span class="yellow">What we know so far about the scutoid?</span>
+                <span class="yellow">What we know so far about the Squirmgle?</span>
                 The solitary Squirmgle consumes floating data fragments for sustenance. It communicates through gentle 
                 vibrations, though frantic, high-speed shaking means it's scared. A Squirmgle's number of limbs can 
                 change, and it instinctively avoids other creatures, including curious observers, preferring its own 
                 company in the vast digital sea.
                 <br>
                 <span class="yellow">Guidelines for human interaction with this creature</span>
-                The Scutoid is shy. Hovering your cursor too close will cause it stress and trigger its flight instinct. 
+                The Squirmgle is shy. Hovering your cursor too close will cause it stress and trigger its flight instinct. 
                 Do not provoke. Clicking on or near the Scutoid is strictly discouraged. 
                 This triggers its Hyperkinetic Escape Reflex, which is highly stressful for the creature and can be 
                 disorienting for the observer due to the rapid, chaotic environmental shifts. 
