--- a/blobby/index.html
+++ b/blobby/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div class="main-wrapper">
-    <h1>Sound</h1>
+    <h1>Blobby Guy</h1>
 
     <!-- the following div will contain the p5 canvas. -->
     <div id="p5-canvas-container">
