--- a/miniProject8/index.html
+++ b/miniProject8/index.html
@@ -20,14 +20,15 @@
 <body>
 
   <div class="main-wrapper">
-    <h1>Project Title</h1>
+    <h1>Plastic Waste</h1>
 
     <!-- the following div will contain the p5 canvas. -->
     <div id="p5-canvas-container">
       <!-- p5 canvas will be appended here. -->
     </div>
 
-    <p>Project Description</p>
+    <p>Year: <span id="year-display">2025</span></p>
+    <p>Plastic Objects in Ocean: <span id="plastic-count">0</span></p>
   </div>
 
   <!-- the script tag below should always be at the bottom, right before the closing body tag -->
